# Citebase

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  codecov.yml  coverage.xml  eka.bib  log.html  output.xml  pyproject.toml  report.html  testi1.bib  testiiiii.bib
.github/workflows/: main.yml
data/: database.sqlite  test-database.sqlite
src/: AppLibrary.py  app.py  bib_file_importer.py  book_citation.py  build.py  config.py  console_io.py  database_connection.py  import.py  index.py  initialize_database.py  new_citation.py  stub_io.py
src/entities/: book.py
src/front_end/: bibconverter.py  delete_all.py  delete_book.py  list_citation.py  list_commands.py  new_citation.py
src/repositories/: citation_repository.py
src/services/: citation_service.py
src/tests/: add_book.robot  book_entity_test.py  citation_service_test.py  citations_test.py  delete_book.robot  export_import.robot  resources.robot
src/tests/resources/: test.bib
