[tool.poetry]
name = "Citebase"
version = "0.1.0"
description = ""
authors = ["Lotta Tanner <lotta.tanner@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"
robotframework = "^6.0.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
